--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 				<a href="#area_sobre" id="link_nav_sobre" class="link_nav">
 					SOBRE
 				</a>
-        <a href="/noticias" id="link_nav_noticias" class="link_nav">
+        <!-- <a href="/noticias" id="link_nav_noticias" class="link_nav">
           NOTÍCIAS
-        </a>
+        </a> -->
 			</nav>
 
 			<script src="js/btnMenu.js"></script>
@@ -114,7 +114,7 @@
                 </div>
             </div> <!--fim-card-->
           </div><!--fim-contentCARD-->
-          <a class="btn-noticias"href="#">Ver Todas Noticias</a>
+          <a class="btn-noticias"href="/noticias">Ver Todas Noticias</a>
         </div><!--fim-tabsContants-noticias-->
 
         <div id="boletim" class="tabcontent">
@@ -201,12 +201,11 @@
     <footer id="rodape">
       <div class="container-footer">
         <a href="https://www.facebook.com/jiifms/" class="fa fa-facebook"></a>
-        <a href="#" class="fa fa-instagram"></a>
         <div class="logo-footer">
           <img src="img/JIIfs.svg" alt="logo">
           <p>JIIF - Jogos Interno do IFMS </p>
         </div>
-        <a class="acesso-restrito" href="//acessar">Acesso restrito</a>
+        <a class="acesso-restrito" href="/acessar">Acesso restrito</a>
       </div>
       <div class="copyright">
         <h1>&copy 2018 - COMISSÃO DE TI</h1>
